--- a/bootstrapportfolio.css
+++ b/bootstrapportfolio.css
@@ -21,7 +21,8 @@ p {
 img {
     border-style: inset;
     border-color: rgb(56, 142, 255);
-    padding: 0px
+    padding: 0px;
+    width: 500px
 }
 
 #contactspan {
